@@ -63,6 +63,7 @@ Yosys 0.9 .. Yosys 0.9-dev
     - Improved support of $readmem[hb] Memory Content File inclusion
     - Added "opt_lut_ins" pass
     - Added "logger" pass
+    - Added "select -unset"
 
 Yosys 0.8 .. Yosys 0.9
 ----------------------
